--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -44,12 +44,14 @@ button:hover {
 color: gray;
 margin: 1rem 10rem;
 }
+.client-inner-box {
+  margin: 0 1.5rem;
+}
 .client-outer-box {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
-  
 }
 
 @media only screen and (max-width: 720px)
