--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,5 +1,5 @@
 body {
-  background: black;
+  background: #090909;
   text-align: center;
   /* display: flex;
   align-items: center;
@@ -8,7 +8,7 @@ body {
 }
 a {
   text-decoration: none;
-  font-size: 24px;
+  font-size: 26px;
   color: ivory;
   padding: .5rem;
 }
@@ -16,7 +16,7 @@ a:hover {
   color: gray;
 }
 h2, h3 {
-  margin-bottom: 0;
+  margin: 1rem;
 }
 
 h4 {
@@ -30,11 +30,14 @@ input:hover, textarea:hover {
   background: ivory;
 }
 button {
-  width: 10rem;
-  margin: 1rem;
+  width: 12rem;
+  margin: 2rem;
+  padding: .5rem;
+  font-weight: bold;
 }
 button:hover {
   cursor: pointer;
+  background: gray;
 }
 
 .consultation {
@@ -42,7 +45,7 @@ button:hover {
 }
 .text-block {
 color: gray;
-margin: 1rem 10rem;
+margin: 1rem 8rem;
 }
 .client-inner-box {
   margin: 0 1.5rem;
@@ -52,6 +55,15 @@ margin: 1rem 10rem;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
+}
+.header {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+}
+.top, .footer {
+  margin: 1rem 0;
 }
 
 @media only screen and (max-width: 720px)
