--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -8,7 +8,7 @@ body {
 }
 a {
   text-decoration: none;
-  font-size: 26px;
+  font-size: 25px;
   color: ivory;
   padding: .5rem;
 }
@@ -19,8 +19,10 @@ h2, h3 {
   margin: 1rem;
 }
 
-h4 {
-  margin: 0;
+h5 {
+  padding: 1rem;
+  background:ivory;
+  font-size: 18px;
 }
 input, textarea {
   width: 50rem;
@@ -48,7 +50,7 @@ color: gray;
 margin: 1rem 8rem;
 }
 .client-inner-box {
-  margin: 0 1.5rem;
+  margin: 0 2rem;
 }
 .client-outer-box {
   display: flex;
@@ -64,6 +66,9 @@ margin: 1rem 8rem;
 }
 .top, .footer {
   margin: 1rem 0;
+}
+.more {
+  color: #090909;
 }
 
 @media only screen and (max-width: 720px)
