--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -17,11 +17,11 @@ a:hover {
 }
 h2, h3 {
   margin: 1rem;
+  padding: 1rem;
 }
 
 h5 {
   padding: 1rem;
-  background:ivory;
   font-size: 18px;
   margin: 0;
 }
@@ -44,10 +44,14 @@ button:hover {
 }
 .consultation {
   color: gold;
+  font-size: 30px;
+  font-weight: bold;
+  margin: .5rem;
 }
 .text-block {
-  color: gray;
   margin: 1rem 10rem;
+  padding: 1 rem;
+  background-color: #1f1f1f;
 }
 .client-inner-box {
   margin: 0 2rem;
@@ -74,24 +78,21 @@ button:hover {
   align-items: center;
 }
 .services-box {
-  width: 50%;
+  width: 75%;
 }
-.spacing {
-  padding: 2rem;
-}
-.more {
-  color: #090909;
-}
+
 
 @media only screen and (max-width: 720px)
 {
-a {
+
+a, h2, h3 {
   font-size: 18px;
- }
-h2,h3 {
-  font-size: 18px;
+}
+input, textarea {
+  width: 20rem;
 }
 .text-block {
   margin: .5rem 2rem;
+  padding: 0;
 }
 }
