--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,6 +1,7 @@
 body {
   background: #1f1f1f;
   text-align: center;
+  justify-content: center;
   /* display: flex;
   align-items: center;
   justify-content: center; */
@@ -8,7 +9,7 @@ body {
 }
 a {
   text-decoration: none;
-  font-size: 25px;
+  font-size: 40px;
   color: gray;
   padding: .5rem;
 }
@@ -16,8 +17,8 @@ a:hover {
   color: ivory;
 }
 h2, h3 {
-  margin: 1rem;
-  padding: 1rem;
+  margin: .5rem;
+  padding: .5rem;
 }
 h5 {
   padding: 1rem;
@@ -48,9 +49,9 @@ button:hover {
   margin: .5rem;
 }
 .text-block {
-  margin: 1rem 10rem;
-  padding: 1 rem;
-  background-color: #1f1f1f;
+  background: #1f1f1f;
+  border: 5px solid black;
+  font-family: sans-serif;
 }
 .gianni {
   margin: 0;
@@ -78,14 +79,14 @@ button:hover {
 .top, .footer {
   margin: 1rem 0;
 }
-.outer-services-box {
+.outer-services-box, .inner-index-box {
   display: flex;
   flex-direction: row;
   justify-content: center;
   flex-wrap: wrap;
   align-items: center;
 }
-
+  
 
 
 
@@ -93,7 +94,7 @@ button:hover {
 {
 
 a, h2, h3 {
-  font-size: 18px;
+  font-size: 20px;
 }
 input, textarea {
   width: 20rem;
