--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -49,9 +49,10 @@ button:hover {
   margin: .5rem;
 }
 .text-block {
-  background: #1f1f1f;
-  border: 5px solid black;
-  font-family: sans-serif;
+  background: #090909;
+  color: ivory;
+  width: 80%;
+  border: 1px solid ivory;
 }
 .gianni {
   margin: 0;
